# dotfiles

./: README.md  docker-compose.yml  online_install.sh
config/: repos.cfg
core/ai/claude-sauce/: .gitignore  .pylintrc  CLAUDE.md  README.md  pyproject.toml
core/ai/claude-sauce/.claude-plugin/: marketplace.json
core/ai/claude-sauce/plugins/bedrock-usage/: README.md
core/ai/claude-sauce/plugins/bedrock-usage/.claude-plugin/: plugin.json
core/ai/claude-sauce/plugins/bedrock-usage/commands/: bedrock-enable-logging.md  bedrock-usage.md
core/ai/claude-sauce/plugins/codacy/: README.md
core/ai/claude-sauce/plugins/codacy/.claude-plugin/: plugin.json
core/ai/claude-sauce/plugins/code-assist/: README.md
core/ai/claude-sauce/plugins/code-assist/.claude-plugin/: plugin.json
core/ai/claude-sauce/plugins/code-assist/commands/: pr-assist-review-deep.md  pr-assist-review-quick.md  pr-assist-summary.md
core/ai/claude-sauce/plugins/core/: README.md
core/ai/claude-sauce/plugins/core/.claude-plugin/: plugin.json
core/ai/claude-sauce/plugins/github-enterprise/: README.md
core/ai/claude-sauce/plugins/github-enterprise/.claude-plugin/: plugin.json
core/ai/claude-sauce/plugins/jenkins/: README.md
core/ai/claude-sauce/plugins/jenkins/.claude-plugin/: plugin.json
core/ai/claude-sauce/plugins/jenkins/commands/: jenkins-build-timings.md
core/ai/claude-sauce/plugins/prompt-boost/.claude-plugin/: plugin.json
core/ai/claude-sauce/plugins/reference-manager/.claude-plugin/: plugin.json
core/ai/claude-sauce/scripts/: sync-to-cursor.py
core/git/: gitconfig  install  (+1 more)
(+95 files in other folders)
